# smart-lens

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: server.py
app/bases/: ocr.py  translator.py
app/libs/ocr/: pytesseract.py
app/libs/translator/: duckduckgo.py  ollama.py
app/typings/: api_response.py  translation.py
